--- a/sddms-client/Cargo.toml
+++ b/sddms-client/Cargo.toml
@@ -18,3 +18,4 @@ tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
 tonic = "0.10.2"
 serde = "1.0.192"
 serde_json = "1.0.108"
+tabled = "0.14.0"
