--- a/sddms-site/Cargo.toml
+++ b/sddms-site/Cargo.toml
@@ -14,6 +14,6 @@ log = "0.4.20"
 tonic = "0.10.2"
 prost = "0.12.1"
 tokio = { version =  "1.33.0", features = ["macros", "rt-multi-thread"] }
-rusqlite = "0.30.0"
+rusqlite = { version = "0.30.0", features = ["backup"] }
 serde = "1.0.192"
 serde_json = "1.0.108"
