--- a/sddms-site/Cargo.toml
+++ b/sddms-site/Cargo.toml
@@ -17,3 +17,4 @@ tokio = { version =  "1.33.0", features = ["macros", "rt-multi-thread"] }
 rusqlite = { version = "0.30.0", features = ["backup"] }
 serde = "1.0.192"
 serde_json = "1.0.108"
+time = { version = "0.3.30", features = ["formatting"] }
